Criação do projeto, implementação da home, footer e navbar, instalação do bootstrap e fontawesome

--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,32 @@
-<p>home works!</p>
+<div class="container w-100">
+
+    <div class="row w-100 mt-5">
+        <div class="col-md-12">
+            <h1 class="text-monospace text-center"> Sejam bem vindes ao meu blog! </h1>
+        </div>
+    </div>
+
+    <div class="row w-100 mt-4 mb-4">
+        <div class="col-md-12">
+            <p class="text-justify text-monospace">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nam aliquid
+                minus sint ea deleniti, quos nostrum ullam provident beatae voluptate ipsam 
+                eligendi similique porro facere repudiandae nemo iure totam?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id aspernatur 
+                praesentium deserunt enim dolore nam minima, aliquam odit temporibus labore 
+                quae? Fuga illo, dolore recusandae perferendis numquam totam ipsam molestias.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui pariatur dicta 
+                saepe fugiat? Corrupti quidem mollitia, inventore deleniti, tempore nulla 
+                consequuntur reprehenderit molestiae excepturi corporis assumenda blanditiis 
+                expedita, quis fuga!
+            </p>
+        </div>
+    </div>
+</div>
+    <div class="parallax"></div>
+
+    <div class="row w-100 mt-5 mb-5">
+        <div class="com-md-12 w-100 d-flex justify-content-center">
+            <button class="btn btn-outline-dark text-uppercase font-weight-bold">Ver o feed</button>
+        </div>
+    </div>
