Atualizar página feed

--- a/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -1,11 +1,11 @@
 <div class="card border-0" style="width: 18rem;">
     <div class="d-flex justify-content-center">
-        <img class="card-img-top rounded-circle w-75" src=".../100px180/" alt="Imagem de capa do card">
+        <img class="card-img-top rounded-circle w-75" src="https://i.imgur.com/xUsLkrM.jpg" alt="Imagem de capa do card">
     </div>
     
     <div class="card-body">
         <h5 class="card-title text-center tet-monospace">Claudia Yapuchura</h5>
-        <p class="card-text text-center text-monospace">Estudante de Desenvolvedor(a) Java Jr. na Generation Brasil.</p>
+        <p class="card-text text-center text-monospace">Estudante Desenvolvedor(a) Java Jr. na Generation Brasil.</p>
         
         <a href="https://www.linkedin.com/in/claudia-yapuchura-saire/" class="btn btn-outline-info mb-3 d-flex justify-content-center" 
         target="_blank">LinkedIn</a>
