--- a/blogPessoal/src/app/app.component.html
+++ b/blogPessoal/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 
-<app-feed></app-feed>
+<!--Rota dinâmica-->
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
