Adicionar configuração de segurança- cadastro e login

--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -9,16 +9,18 @@
     <div class="row w-100 mt-4 mb-4">
         <div class="col-md-12">
             <p class="text-justify text-monospace">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nam aliquid
-                minus sint ea deleniti, quos nostrum ullam provident beatae voluptate ipsam 
-                eligendi similique porro facere repudiandae nemo iure totam?
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id aspernatur 
-                praesentium deserunt enim dolore nam minima, aliquam odit temporibus labore 
-                quae? Fuga illo, dolore recusandae perferendis numquam totam ipsam molestias.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui pariatur dicta 
-                saepe fugiat? Corrupti quidem mollitia, inventore deleniti, tempore nulla 
-                consequuntur reprehenderit molestiae excepturi corporis assumenda blanditiis 
-                expedita, quis fuga!
+                Eu sou a Claudia e sou uma jovem em busca de aprendizados pelo Mundo. 
+                Sou estudante de Tecnologia em Automação Industrial, aprendi muito com 
+                área e carrego valiosos valores que adquiri no curso e no Grupo de Robótica, 
+                porém, quero ir além e ter novas jornadas...
+                Uma dessas jornadas me refiro a tecnologia, área, no qual estou há 1 ano, 
+                venho obtendo maravilhosas experiências e obtive aprendizados como HTML, CSS, 
+                JS, GitHub, Python, Django, lógica de programação e atualmente estou aprendendo 
+                Java através da Generation Brasil.
+                De toda essa jornada devo confessar que sigo apaixonada cada dia mais pela 
+                tecnologia e possibilidades. Bom, posso dizer que é um mix de áreas que dá 
+                super certo! Te convido a ver mais detalhes sobre minha jornada profissional 
+                neste perfil ! 
             </p>
         </div>
     </div>
