--- a/blogPessoal/src/app/home/home.component.css
+++ b/blogPessoal/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .parallax {
-    background-image: url('https://i.imgur.com/PEoH72I.jpg');
+    background-image: url('https://i.imgur.com/FugyahY.png');
 
     min-height: 500px;
 
