--- a/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -4,7 +4,7 @@
     </div>
     
     <div class="card-body">
-        <h5 class="card-title text-center tet-monospace">Claudia Yapuchura</h5>
+        <h5 class="card-title text-center tet-monospace">{{nome}}</h5>
         <p class="card-text text-center text-monospace">Estudante Desenvolvedor(a) Java Jr. na Generation Brasil.</p>
         
         <a href="https://www.linkedin.com/in/claudia-yapuchura-saire/" class="btn btn-outline-info mb-3 d-flex justify-content-center" 
