--- a/blogPessoal/src/app/footer/footer.component.css
+++ b/blogPessoal/src/app/footer/footer.component.css
@@ -1,3 +1,11 @@
+/* footer */
+.page-footer {
+    background-image: linear-gradient(100deg, #4bf9ff 0, #53e4ff 25%, #58ceec 50%, #5bb9d5 75%, #5ca5bf 100%);
+}
+
+.footer-copyright {
+    background-image: linear-gradient(100deg, #4bf9ff 0, #53e4ff 25%, #58ceec 50%, #5bb9d5 75%, #5ca5bf 100%);
+}
 /* footer social icons */
 
 ul.social-network {
